--- a/appcoder/templates/appcoder/estudiantes.html
+++ b/appcoder/templates/appcoder/estudiantes.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudiantes</title>
-</head>
-<style>
-    body {
-          background: aquamarine;
-    }
-</style>
-<body>
-    <h1>Vista de estudiantes</h1>
-</body>
-</html>
+
+
+{% extends 'appcoder/base.html' %}
+
+
+{% block main_content %}
+<p>
+    Vista de estudiantes
+    <ul>
+        <li>1</li>
+        <li>1</li>
+        <li>1</li>
+    </ul>
+</p>
+{% endblock main_content %}
