--- a/appcoder/templates/appcoder/profesores.html
+++ b/appcoder/templates/appcoder/profesores.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profesores</title>
-</head>
-<style>
-    body {
-          background: red;
-    }
-</style>
-<body>
-    <h1>Vista de Profesores</h1>
-</body>
-</html>
+
+
+{% extends 'appcoder/base.html' %}
+
+
+{% block main_content %}
+<p>
+    Vista de Profesores
+</p>
+{% endblock main_content %}
